[gd_scene load_steps=5 format=3 uid="uid://cmttwpfwdaw4o"]

[ext_resource type="Script" uid="uid://bpgn4pqt1av8" path="res://source/singletone/Pausa/pausa.gd" id="1_aoeoc"]
[ext_resource type="FontFile" uid="uid://13fv2426xy8p" path="res://resources/fonts/Londrina_Solid/LondrinaSolid-Light.ttf" id="3_2yabw"]
[ext_resource type="PackedScene" uid="uid://bfaclosrqprfa" path="res://source/componentes/Btn_a_menu_principal.tscn" id="3_gyn8o"]
[ext_resource type="Theme" uid="uid://dxkl17rvghnqm" path="res://resources/themes/informal_theme.tres" id="4_u2isw"]

[node name="Pausa" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_aoeoc")

[node name="ClrFondo" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.188235)

[node name="Label" type="Label" parent="ClrFondo"]
layout_mode = 0
offset_left = 541.0
offset_top = 66.0
offset_right = 773.0
offset_bottom = 185.0
theme_override_fonts/font = ExtResource("3_2yabw")
theme_override_font_sizes/font_size = 100
text = "PAUSA"

[node name="Label2" type="Label" parent="ClrFondo"]
layout_mode = 0
offset_left = 550.0
offset_top = 511.0
offset_right = 871.0
offset_bottom = 568.0
theme_override_fonts/font = ExtResource("3_2yabw")
theme_override_font_sizes/font_size = 32
text = "Presiona Esc para volver"

[node name="HB" type="HBoxContainer" parent="ClrFondo"]
layout_mode = 0
offset_left = 462.0
offset_top = 312.0
offset_right = 879.0
offset_bottom = 352.0

[node name="BtnContinuar" type="Button" parent="ClrFondo/HB"]
layout_mode = 2
focus_neighbor_left = NodePath("../BtnSave")
focus_neighbor_right = NodePath("../BtnAMenuPrincipal")
theme = ExtResource("4_u2isw")
text = " Continuar "

[node name="BtnAMenuPrincipal" parent="ClrFondo/HB" instance=ExtResource("3_gyn8o")]
layout_mode = 2
focus_neighbor_left = NodePath("../BtnContinuar")
focus_neighbor_right = NodePath("../BtnSave")
text = " Men√∫ principal "

[node name="BtnSave" type="Button" parent="ClrFondo/HB"]
layout_mode = 2
focus_neighbor_left = NodePath("../BtnAMenuPrincipal")
focus_neighbor_right = NodePath("../BtnContinuar")
theme = ExtResource("4_u2isw")
text = " Guardar partida "

[node name="ASPPausa" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="ClrFondo/HB/BtnContinuar" to="." method="_on_btn_continuar_pressed"]
[connection signal="pressed" from="ClrFondo/HB/BtnSave" to="." method="_on_btn_save_pressed"]
